Added basic html elements to give an outline

--- a/index.html
+++ b/index.html
@@ -2,8 +2,30 @@
 <html>
 <head>
     <title>Fitness Heaven</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    
+    <nav  class ="navMenu">
+        <a href="index.html">Home</a> 
+        <a href="menu.html">Menu</a> 
+        <a href="intro.html">About</a> 
+        <a href="creative.html">Gallery</a> 
+    </nav>
+
+    <div id="title" >
+        <h1>Fitness Heaven
+        </h1>
+        
+    </div>
+    <div id="welcome" >
+        <h1>Where Fitness Becomes Your Religion
+        </h1>
+    </div>
+    <button class="button">Book Now</button>
+
+
 </body>
 </html>
+
+
