--- a/form.html
+++ b/form.html
@@ -66,7 +66,7 @@
     <nav  class ="navMenu">
         <a href="index.html">Home</a> 
         <a href="form.html">Sign Up</a> 
-        <a href="intro.html">About</a> 
+        <a href="about.html">About</a> 
     </nav>
     <form id="form"name="MembershipForm">
 
